Font Awesome added, used for chevron-down icon.

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,45 +1,71 @@
-// TODO
-@import url('https://fonts.googleapis.com/css?family=Roboto:300&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap');
+
+$primary-colour: #6b47b3;
 
 .header {
-  // background-image: url("https://picsum.photos/700/400");
-  // background-repeat: no-repeat;
-  // background-size: 700px;
-  width: 100%;
-  background-color: aquamarine;
-  img {
-      position: relative;
-      max-width: 100%;
-  }
-  h3 {
-    top: 0px;
-    position: absolute;
-    font-family: roboto, sans-serif;
-    font-size: 1em;
-    color: #6b47b3;
-    padding: 0px 25px;
-    text-transform: uppercase;
-    overflow: hidden;
-  }
-  .header-line-1 {
-      top: 400px;
-      
-  }
-  .header-line-2 {
-      top: 300px;
-  }
-  svg {
-      position: absolute;
-      top: 200px;
-  }
-  p {
-    font-family: roboto, sans-serif;
-    padding: 30px;
-  }
- 
-  a {
-    color: #523688;
-    text-transform: uppercase;
-  }
+    // background-image: url("https://picsum.photos/700/400");
+    // background-repeat: no-repeat;
+    // background-size: 700px;
+    //display: flex;
+    //align-items: center;
+    width: 100%;
+    background-color: aquamarine;
+    position: relative;
+
+    img {
+        max-width: 100%;
+        z-index: 20;
+    }
+
+    .overlay {
+        min-width: 90%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 30;
+        position: absolute;
+
+        h3 {
+            font-family: roboto, sans-serif;
+            font-weight: 500;
+            font-size: 2.2vw;
+            color: $primary-colour;
+            text-transform: uppercase;
+            margin: 0;
+
+            //margin-bottom: 10px;
+            // overflow: hidden;
+            span {
+                font-weight: 400;
+            }
+        }
+
+        .header-line-top {}
+
+        .header-line-bottom {
+            font-weight: 400;
+        }
+
+        svg {
+            margin: 10px 0px;
+        }
+
+    }
 }
 
+.link {
+    position: absolute;
+    bottom: 5px;
+    left: 50%;
+    display: flex;
+    justify-content: center;
+
+    i {
+        color: $primary-colour;
+    }
+
+    a {
+        color: #523688;
+        text-transform: uppercase;
+    }
+}
