--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,41 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap");
 .header {
   width: 100%;
-  background-color: aquamarine; }
+  background-color: aquamarine;
+  position: relative; }
   .header img {
-    position: relative;
-    max-width: 100%; }
-  .header h3 {
-    top: 0px;
-    position: absolute;
-    font-family: roboto, sans-serif;
-    font-size: 1em;
-    color: #6b47b3;
-    padding: 0px 25px;
-    text-transform: uppercase;
-    overflow: hidden; }
-  .header .header-line-1 {
-    top: 400px; }
-  .header .header-line-2 {
-    top: 300px; }
-  .header svg {
-    position: absolute;
-    top: 200px; }
-  .header p {
-    font-family: roboto, sans-serif;
-    padding: 30px; }
-  .header a {
+    max-width: 100%;
+    z-index: 20; }
+  .header .overlay {
+    min-width: 90%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 30;
+    position: absolute; }
+    .header .overlay h3 {
+      font-family: roboto, sans-serif;
+      font-weight: 500;
+      font-size: 2.2vw;
+      color: #6b47b3;
+      text-transform: uppercase;
+      margin: 0; }
+      .header .overlay h3 span {
+        font-weight: 400; }
+    .header .overlay .header-line-bottom {
+      font-weight: 400; }
+    .header .overlay svg {
+      margin: 10px 0px; }
+
+.link {
+  position: absolute;
+  bottom: 5px;
+  left: 50%;
+  display: flex;
+  justify-content: center; }
+  .link i {
+    color: #6b47b3; }
+  .link a {
     color: #523688;
     text-transform: uppercase; }
 
