--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -78,11 +78,14 @@ $primary-colour: #6b47b3;
             }
             .header-line-bottom {
                 text-align: center;
+                opacity: 0.75;
                 position: relative;
                 bottom: -10vh;
             }
             svg {
                 margin: 150px 0px 25px 0px;
+                position: relative;
+                bottom: -10vh;
             }
         }
         
