--- a/css/style.css
+++ b/css/style.css
@@ -49,10 +49,13 @@
       top: -16vh; }
     .header .overlay .header-line-bottom {
       text-align: center;
+      opacity: 0.75;
       position: relative;
       bottom: -10vh; }
     .header .overlay svg {
-      margin: 150px 0px 25px 0px; } }
+      margin: 150px 0px 25px 0px;
+      position: relative;
+      bottom: -10vh; } }
 .link {
   position: absolute;
   bottom: 5px;
