--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2,6 +2,8 @@
 
 $primary-colour: #6b47b3;
 
+html { scroll-behavior: smooth; } 
+
 .header {
     // background-image: url("https://picsum.photos/700/400");
 
@@ -84,6 +86,7 @@ $primary-colour: #6b47b3;
 
     position: relative;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 
@@ -96,7 +99,7 @@ $primary-colour: #6b47b3;
     }
 
     h2 {
-        position: absolute;
+        // position: absolute;
         max-width: 700px;
         padding: 5px;
 
@@ -108,6 +111,7 @@ $primary-colour: #6b47b3;
             opacity: 0.6;
         }
     }
+
 }
 
 .link {
@@ -122,6 +126,18 @@ $primary-colour: #6b47b3;
         color: #523688;
         text-transform: uppercase;
         cursor: pointer;
+    }
+}
+
+.panel-btn {
+    color: $primary-colour;
+    text-transform: uppercase;
+    font-family: roboto, sans-serif;
+    font-weight: 450;
+    letter-spacing: 1px;
+    cursor: pointer;
+    i {
+        margin-left: 5px;
     }
 }
 
