--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap");
+html {
+  scroll-behavior: smooth; }
+
 .header {
   background: url("../assets/images/bg-head_01.jpg");
   background-repeat: no-repeat;
@@ -53,6 +56,7 @@
   overflow: hidden;
   position: relative;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center; }
   .panel-about img {
@@ -63,7 +67,6 @@
     /* Safari 6.0 - 9.0 */
     filter: grayscale(100%); }
   .panel-about h2 {
-    position: absolute;
     max-width: 700px;
     padding: 5px;
     color: #424242;
@@ -83,6 +86,16 @@
     color: #523688;
     text-transform: uppercase;
     cursor: pointer; }
+
+.panel-btn {
+  color: #6b47b3;
+  text-transform: uppercase;
+  font-family: roboto, sans-serif;
+  font-weight: 450;
+  letter-spacing: 1px;
+  cursor: pointer; }
+  .panel-btn i {
+    margin-left: 5px; }
 
 /* Mobile styles */
 @media (max-width: 768px) {
