--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -61,10 +61,22 @@ html { scroll-behavior: smooth; }
             font-weight: 400;
         }
 
-        svg {
+        svg, #minds {
             margin: 10px 0px;
+            
+            path {
+                fill: none;
+                stroke: #FFFFFF;
+                stroke-width: 4;
+                stroke-miterlimit: 10;
+                -webkit-transition: fill 5s, stroke-width .25s;
+                transition: fill 5s, stroke-width .25s;
+            }
         }
-
+        .minds-svg-bg path{
+            stroke-width: 0px !important;
+            fill: #fff !important;
+        }
     }
 }
 
